--- a/Makefile.ffmpeg
+++ b/Makefile.ffmpeg
@@ -20,11 +20,10 @@ configure:
 	CFLAGS="$(CFLAGS) ${INCLUDES}" \
 	LDFLAGS="" \
   ./configure \
-			--extra-cflags="-mfpu=vfp -mfloat-abi=hard" \
+			--extra-cflags="-O2 -march=armv8-a+crc -mtune=cortex-a72 -ftree-vectorize -funsafe-math-optimizations" \
+			--enable-neon \
 			--enable-shared \
 			--disable-static \
-			--arch=arm \
-			--cpu=arm1176jzf-s \
 			--target-os=linux \
 			--disable-hwaccels \
 			--enable-parsers \
@@ -39,16 +38,12 @@ configure:
 			--enable-gpl \
 			--enable-version3 \
 			--enable-protocols \
-			--enable-libsmbclient \
 			--enable-libssh \
 			--enable-nonfree \
 			--enable-openssl \
 			--enable-pthreads \
 			--enable-pic \
 			--disable-armv5te \
-			--disable-neon \
-			--enable-armv6t2 \
-			--enable-armv6 \
 			--enable-hardcoded-tables \
 			--disable-runtime-cpudetect \
 			--disable-debug \
@@ -238,7 +233,9 @@ configure:
 			--disable-decoder=xbin \
 			--disable-decoder=idf \
 			--disable-decoder=hevc \
-			--enable-decoder=opus
+			--enable-decoder=opus \
+			--enable-decoder=vp9 \
+			--enable-altivec
 
 .PHONY : clean
 clean:
